@@ -53,8 +53,10 @@ class UploadForm {
 		
 		$this->mUploadDescription = $request->getText( 'wpUploadDescription' );
 		$this->mUploadCopyStatus  = $request->getText( 'wpUploadCopyStatus' );
-		$this->mUploadSource      = $request->getText( 'wpUploadSource');
-		
+		$this->mUploadSource      = $request->getText( 'wpUploadSource' );
+		$this->mWatchthis         = $request->getBool( 'wpWatchthis' );
+		wfDebug( "UploadForm: watchthis is: '$this->mWatchthis'\n" );
+
 		$this->mAction            = $request->getVal( 'action' );
 		
 		$this->mSessionKey        = $request->getInt( 'wpSessionKey' );
@@ -270,7 +272,8 @@ class UploadForm {
 			$success = $img->recordUpload( $this->mUploadOldVersion,
 			                                $this->mUploadDescription,
 			                                $this->mUploadCopyStatus,
-			                                $this->mUploadSource );
+			                                $this->mUploadSource,
+			                                $this->mWatchthis );
 
 			if ( $success ) {
 				$this->showSuccess();
@@ -487,6 +490,7 @@ class UploadForm {
 		<input type='hidden' name='wpSessionKey' value=\"" . htmlspecialchars( $this->mSessionKey ) . "\" />
 		<input type='hidden' name='wpUploadDescription' value=\"" . htmlspecialchars( $this->mUploadDescription ) . "\" />
 		<input type='hidden' name='wpDestFile' value=\"" . htmlspecialchars( $this->mDestFile ) . "\" />
+		<input type='hidden' name='wpWatchthis' value=\"" . htmlspecialchars( intval( $this->mWatchthis ) ) . "\" />
 	{$copyright}
 	<table border='0'>
 		<tr>
@@ -558,6 +562,10 @@ class UploadForm {
 	" ;
 		  }
 
+		$watchChecked = $wgUser->getOption( 'watchdefault' )
+			? 'checked="checked"'
+			: '';
+		
 		$wgOut->addHTML( "
 	<form id='upload' method='post' enctype='multipart/form-data' action=\"$action\">
 	<table border='0'><tr>
@@ -574,6 +582,11 @@ class UploadForm {
 	<textarea tabindex='2' name='wpUploadDescription' rows='6' cols='{$cols}'{$ew}>"	
 	  . htmlspecialchars( $this->mUploadDescription ) .
 	"</textarea>
+	</td></tr><tr>
+	
+	<td></td><td align='left'>
+	<input type='checkbox' name='wpWatchthis' id='wpWatchthis' $watchChecked value='true' />
+	<label for='wpWatchthis'>" . wfMsgHtml( 'watchthis' ) . "</label>
 	</td></tr><tr>
 	{$source}
 	</tr>
