@@ -770,6 +770,9 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * Special:Import/importDump fixes: report XML parse errors, accept <minor/>
 * (bug 3489) PHP 5.1 compat problem with captioned images
 * (bug 3350) Missing label for move talk page checkbox.
+* (bug 2570) Add 'watch this page' checkbox on uploads, watch uploads
+  by default when 'watchdefault' option is on
+
 
 === Caveats ===
 
